--- a/index.html
+++ b/index.html
@@ -57,11 +57,22 @@ keywords:       Awesome, website, keywords
 
     <section>
         <div class="container">
+            <div class"row">
+                <div class="col-12">
+                    <i class="icon-inbox"></i>
+                    <h2>Updates volgen?</h2>
+                    <p>Op de hoogte blijven van updates en ontwikkelingen? Schrijf u dan nu in voor onze nieuwsbrief</p>
+                    <p><a href="#" class="btn btn-primary btn-large">Schrijf me in</a></p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-12">
                     <form class="form-horizontal" action="http://gouwestad.us1.list-manage.com/subscribe/post" method="post">
                         <input type="hidden" name="u" value="12356aa89b280225cc4c74fbb">
                         <input type="hidden" name="id" value="02695a6847">
+                        <div class"row">
+                            <h2>Inschrijven</h2>
+                        </div>
                         <div class="row">
                             <label for="MERG0" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-10">
@@ -82,7 +93,7 @@ keywords:       Awesome, website, keywords
                         </div>
                         <div class="row">
                             <div class="col-sm-10 col-offset-2">
-                              <button type="submit" class="btn btn-default">Schrijf me in</button>
+                              <button type="submit" class="btn btn-default" >Schrijf me in</button>
                             </div>
                         </div>
                     </form>
