images meten is weten

--- a/index.html
+++ b/index.html
@@ -21,25 +21,28 @@ keywords:       Awesome, website, keywords
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="page-header">
-                        <h1>What makes us <span>special</span></h1>
+                        <h1>Meten is <strong>weten</strong></h1>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-sm-4">
-                    <h3>Heading</h3>
+                    <img src="img/social-analytics.png">
+                    <h3>Sociale bronnen</h3>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <p><a class="btn" href="#">Lees verder &raquo;</a></p>
                 </div>
                 <div class="col-12 col-sm-4">
-                    <h3>Heading</h3>
+                    <img src="img/inpage-analytics.png">
+                    <h3>In-page analyseren</h3>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <p><a class="btn" href="#">Lees verder &raquo;</a></p>
                </div>
                 <div class="col-12 col-sm-4">
-                    <h3>Heading</h3>
+                    <img src="img/mobile-analytics.png">
+                    <h3>Mobiele beleving</h3>
                     <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <p><a class="btn" href="#">Lees verder &raquo;</a></p>
                 </div>
             </div>
         </div>
@@ -50,7 +53,7 @@ keywords:       Awesome, website, keywords
             <div class="row">
                 <div class="col12 text-center">
                     <i class="icon-inbox icon-super"></i>
-                    <h2>Keep me <span>posted</span></h2>
+                    <h2>Keep me <strong>posted</strong></h2>
                     <p>Op de hoogte blijven van updates en ontwikkelingen? Schrijf u dan nu in voor onze nieuwsbrief</p>
                     <button class="btn" id="btn-mc">Ja ik wil up to date worden gehouden</button>
                 </div>
@@ -66,7 +69,7 @@ keywords:       Awesome, website, keywords
                                     <a href="#" class="nav-btn-side" id="btn-mc-close">
                                     <i class="icon-remove-sign"></i>
                                     </a>
-                                    <h2>Write me <span>someday</span></h2>
+                                    <h2>Write me <strong>someday</strong></h2>
                                 </div>
                             </div>
                             <div class="row">
