--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ keywords:       Awesome, website, keywords
                     <i class="icon-inbox icon-super"></i>
                     <h2>Keep me <strong>posted</strong></h2>
                     <p class="intro">Op de hoogte blijven van updates en ontwikkelingen? Schrijf u dan nu in voor onze nieuwsbrief</p>
-                    <button class="btn" id="btn-mc">Ja ik wil up to date worden gehouden</button>
+                    <button class="btn btn-animated icon-mail" id="btn-mc"><span>Ja ik wil up to date worden gehouden</span></button>
                 </div>
             </div>
             <div class="mc-page mc-page-2">
