Btn size update

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ keywords:       Awesome, website, keywords
                             </div>
                             <div class="row">
                                 <div class="col-12 text-center">
-                                  <button type="submit" class="btn btn-signup" >Schrijf me in</button>
+                                  <button type="submit" class="btn btn-large btn-signup" >Schrijf me in</button>
                                 </div>
                             </div>
                         </form>
