Eerste opzet sterke punten

--- a/index.html
+++ b/index.html
@@ -16,6 +16,44 @@ keywords:       Awesome, website, keywords
         </div>
     </header>
 
+    <section class="introduction">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <div class="page-header">
+                        <h1>Een nieuw soort website <small>mooi ontworpen en resultaatgericht</small></h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row blocks text-center">
+                <div class="col-12 col-sm-6 col-lg-4 blokje">
+                    <p>Meer aanmeldingen</p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <p>Meer aankopen</p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <p>Meer leads</p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <p>Meer downloads</p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <p>Meer bekijks</p>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <p>Meer fans & volgers</p>
+                </div>
+
+                <!-- Block overlays -->
+                <div class="block-overlay">
+                    <p>Grow your email database by making it easy for your visitors to sign up on your site. A Flip Form or FlipJack can start your relationship off on the right foot.</p>
+                    <a href="#" class="blokje-close">Sluiten</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="special" id="special">
         <div class="container">
             <div class="row">
