Image toegevoegd aan blokjes

--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@ keywords:       Awesome, website, keywords
 
                 <!-- Block overlays -->
                 <div class="block-overlay">
-                    <p>Grow your email database by making it easy for your visitors to sign up on your site. A Flip Form or FlipJack can start your relationship off on the right foot.</p>
-                    <a href="#" class="blokje-close">Sluiten</a>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="{{ site.url }}/img/mobile-analytics.png">
+                        </div>
+                        <div class="col-lg-8">
+                            <p>Grow your email database by making it easy for your visitors to sign up on your site. A Flip Form or FlipJack can start your relationship off on the right foot.</p>
+                            <a href="#" class="blokje-close">Sluiten</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
