--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@ keywords:       Awesome, website, keywords
         </div>
     </header>
 
-    <section class="special" id="special">
+    <section class="responsive-showcase" id="special">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h1>Responsive is uit</h1> 
+                    <h3>Wij noemen het <strong>Responsive++</strong></h3>
+                    <img class="bottom" src="img/imac.png">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="special">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
