geanimeerde showcase slider

--- a/index.html
+++ b/index.html
@@ -68,9 +68,50 @@ keywords:       Awesome, website, keywords
                 <div class="col-12 text-center">
                     <h1>Responsive is uit</h1> 
                     <h3>Wij noemen het <strong>Responsive++</strong></h3>
-                    <img class="bottom" src="img/imac.png">
                 </div>
             </div>
+        </div>
+        <div class="flexslider">
+          <ul class="slides">
+            <li class="showcase-mac">
+                <div class="container"> 
+                    <div class="col-8 responsive-design"> 
+                        <img class="desktop" src="img/responsive/desktop.png">
+                        <img class="laptop" src="img/responsive/laptop.png">
+                        <img class="tablet" src="img/responsive/tablet.png">
+                        <img class="tablet-mini" src="img/responsive/tablet-mini.png">
+                        <img class="phone" src="img/responsive/phone.png">
+                    </div>
+                    <div class="col-4">
+                        <h6>Responsive is standaard</h6>
+                        <p>Alle websites worden responsive opgeleverd, met enkele toevoegingen waardoor het nog beter werkt.</p>
+                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    </div>
+                </div>
+            </li>
+            <li class="showcase-ipad">
+                <div class="container"> 
+                    <div class="col-8 responsive-design"> 
+                        <img class="desktop" src="img/responsive/desktop.png">
+                    </div>
+                    <div class="col-3 col-offset-1">
+                        <h6>Desktop</h6>
+                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    </div>
+                </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="nav-showcase">
+            <ul class="nav navbar">
+                <li>Kies een device: </li>
+                <li><a href="#">Desktop <i class="icon-desktop"></i></a></li>
+                <li><a href="#">Laptop <i class="icon-laptop"></i></a></li>
+                <li><a href="#">Tablet <i class="icon-tablet"></i></a></li>
+                <li><a href="#">Telefoon <i class="icon-mobile-phone"></i></a></li>
+            </ul>
         </div>
     </section>
 
@@ -176,3 +217,4 @@ keywords:       Awesome, website, keywords
           </ul>
         </div>
     </section>
+
