--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ keywords:       Awesome, website, keywords
         </div>
         <div class="flexslider">
           <ul class="slides">
-            <li class="showcase-mac">
+            <li class="showcase-devices">
                 <div class="container"> 
                     <div class="col-8 responsive-design"> 
                         <img class="desktop" src="img/responsive/desktop.png">
@@ -89,7 +89,55 @@ keywords:       Awesome, website, keywords
                     </div>
                 </div>
             </li>
-            <li class="showcase-ipad">
+            <li class="showcase-dekstop">
+                <div class="container"> 
+                    <div class="col-7 responsive-design"> 
+                        <img class="desktop" src="img/responsive/desktop.png">
+                    </div>
+                    <div class="col-5">
+                        <h6>Desktop</h6>
+                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    </div>
+                </div>
+            </li>
+            <li class="showcase-laptop">
+                <div class="container"> 
+                    <div class="col-7 responsive-design"> 
+                        <img class="desktop" src="img/responsive/laptop.png">
+                    </div>
+                    <div class="col-5">
+                        <h6>Desktop</h6>
+                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    </div>
+                </div>
+            </li>
+            <li class="showcase-tablet">
+                <div class="container"> 
+                    <div class="col-7 responsive-design"> 
+                        <img class="desktop" src="img/responsive/tablet.png">
+                    </div>
+                    <div class="col-5">
+                        <h6>Desktop</h6>
+                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    </div>
+                </div>
+            </li>
+            <li class="showcase-dekstop">
+                <div class="container"> 
+                    <div class="col-7 responsive-design"> 
+                        <img class="desktop" src="img/responsive/desktop.png">
+                    </div>
+                    <div class="col-5">
+                        <h6>Desktop</h6>
+                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    </div>
+                </div>
+            </li>
+            <li class="showcase-dekstop">
                 <div class="container"> 
                     <div class="col-7 responsive-design"> 
                         <img class="desktop" src="img/responsive/desktop.png">
