--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ keywords:       Awesome, website, keywords
         <div class="nav-showcase">
             <ul class="nav navbar">
                 <li>Kies een device: </li>
-                <li><a href="#">Desktop <i class="icon-desktop"></i></a></li>
+                <li><a href="#" id="slide-desktop-btn">Desktop <i class="icon-desktop"></i></a></li>
                 <li><a href="#">Laptop <i class="icon-laptop"></i></a></li>
                 <li><a href="#">Tablet <i class="icon-tablet"></i></a></li>
                 <li><a href="#">Telefoon <i class="icon-mobile-phone"></i></a></li>
