--- a/index.html
+++ b/index.html
@@ -75,24 +75,26 @@ keywords:       Awesome, website, keywords
           <ul class="slides">
             <li class="showcase-devices">
                 <div class="container"> 
-                    <div class="col-8 responsive-design"> 
-                        <img class="desktop" src="img/responsive/desktop.png">
-                        <img class="laptop" src="img/responsive/laptop.png">
-                        <img class="tablet" src="img/responsive/tablet.png">
-                        <img class="tablet-mini" src="img/responsive/tablet-mini.png">
-                        <img class="phone" src="img/responsive/phone.png">
-                    </div>
-                    <div class="col-4">
-                        <h6>Responsive is standaard</h6>
-                        <p>Alle websites worden responsive opgeleverd, met enkele toevoegingen waardoor het nog beter werkt.</p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                    <div class="row vert-box">
+                        <div class="col-7 responsive-design"> 
+                            <img class="desktop" src="img/responsive/desktop.png">
+                            <img class="laptop" src="img/responsive/laptop.png">
+                            <img class="tablet" src="img/responsive/tablet.png">
+                            <img class="tablet-mini" src="img/responsive/tablet-mini.png">
+                            <img class="phone" src="img/responsive/phone.png">
+                        </div>
+                        <div class="col-5 vert-middle">
+                            <h6>Responsive is standaard</h6>
+                            <p>Alle websites worden responsive opgeleverd, met enkele toevoegingen waardoor het nog beter werkt.</p>
+                            <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                        </div>
                     </div>
                 </div>
             </li>
             <li class="showcase-dekstop">
                 <div class="container"> 
                     <div class="col-7 responsive-design"> 
-                        <img class="desktop" src="img/responsive/desktop.png">
+                        <img src="img/desktop.png">
                     </div>
                     <div class="col-5">
                         <h6>Desktop</h6>
@@ -104,64 +106,44 @@ keywords:       Awesome, website, keywords
             <li class="showcase-laptop">
                 <div class="container"> 
                     <div class="col-7 responsive-design"> 
-                        <img class="desktop" src="img/responsive/laptop.png">
+                        <img src="img/laptop.png">
                     </div>
                     <div class="col-5">
-                        <h6>Desktop</h6>
-                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                        <h6>Laptop</h6>
+                        <p>Ook laptops varieren tegenwoordig van zakformaat 11 inch tot 19 inch. </p>
                         <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
                     </div>
                 </div>
             </li>
-            <li class="showcase-tablet">
+            <li class="showcase-mobile">
                 <div class="container"> 
                     <div class="col-7 responsive-design"> 
-                        <img class="desktop" src="img/responsive/tablet.png">
+                        <img src="img/tablet.png">
+                        <img src="img/tablet-mini.png">
+                        <img src="img/phone.png">
                     </div>
                     <div class="col-5">
-                        <h6>Desktop</h6>
-                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
-                    </div>
-                </div>
-            </li>
-            <li class="showcase-dekstop">
-                <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img class="desktop" src="img/responsive/desktop.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Desktop</h6>
-                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
-                        <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
-                    </div>
-                </div>
-            </li>
-            <li class="showcase-dekstop">
-                <div class="container"> 
-                    <div class="col-7 responsive-design"> 
-                        <img class="desktop" src="img/responsive/desktop.png">
-                    </div>
-                    <div class="col-5">
-                        <h6>Desktop</h6>
-                        <p>Revolutionair. Van het kleinste beeldscherm tot de allergrootste, altijd 'op maat'. </p>
+                        <h6>Mobiel</h6>
+                        <p>Naast de 'gewone' tablets zijn er ook 7 inch tablets, en een batterij aan verschillende telefoonschermen</p>
                         <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
                     </div>
                 </div>
             </li>
           </ul>
         </div>
-
+    </section>
+    <div class="row">
+        <div class="col-12 nav-showcase">
         <div class="nav-showcase">
-            <ul class="nav navbar">
-                <li>Kies een device: </li>
-                <li><a href="#">Desktop <i class="icon-desktop"></i></a></li>
-                <li><a href="#">Laptop <i class="icon-laptop"></i></a></li>
-                <li><a href="#">Tablet <i class="icon-tablet"></i></a></li>
-                <li><a href="#">Telefoon <i class="icon-mobile-phone"></i></a></li>
+            <ul class="nav nav-pills">
+                <li><a>Kies een device: </a></li>
+                <li><a href="#" id="slide-desktop-btn">Desktop <i class="icon-desktop"></i></a></li>
+                <li><a href="#" id="slide-laptop-btn">Laptop <i class="icon-laptop"></i></a></li>
+                <li><a href="#" id="slide-mobile-btn">Mobiel <i class="icon-tablet"></i> <i class="icon-mobile-phone"></i></a></li>
             </ul>
         </div>
-    </section>
+    </div>
+    </div>
 
     <section class="special">
         <div class="container">
