--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ keywords:       Awesome, website, keywords
                         <div class="col-5 vert-middle">
                             <h6>Responsive is standaard</h6>
                             <p>Alle websites worden responsive opgeleverd, met enkele toevoegingen waardoor het nog beter werkt.</p>
-                            <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup" >Test het</button></a>
+                            <a href="http://placeit.breezi.com/"><button class="btn btn-large btn-signup btn-animated"><i class="icon-desktop"></i> <span>Test het</span></button></a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@ keywords:       Awesome, website, keywords
     </div>
     </div>
 
-    <section class="special">
+    <section>
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
@@ -178,7 +178,7 @@ keywords:       Awesome, website, keywords
         </div>
     </section>
 
-     <section class="signup">
+     <section class="signup special">
         <div class="container">
             <div class="row">
                 <div class="col12 text-center">
@@ -231,23 +231,6 @@ keywords:       Awesome, website, keywords
             </div>
         </div>
     </section>
-
-    <section class="showcase">
-        <div class="flexslider">
-          <ul class="slides">
-            <li>
-              <img src="http://zuidplashof.nl/images/slider2.jpg" />
-            </li>
-            <li>
-              <img src="http://gouwestadmm.github.com/Zuidplashof/images/headerimage.jpg" />
-            </li>
-            <li>
-              <img src="http://zuidplashof.nl/images/slider3.jpg" />
-            </li>
-          </ul>
-        </div>
-    </section>
-
 
     <section class="portfolio">
         <div class="container">
@@ -322,4 +305,5 @@ keywords:       Awesome, website, keywords
             </div>
         </div>
     </section>
+
 
