Added text & skrollr ahah

--- a/index.html
+++ b/index.html
@@ -6,61 +6,151 @@ description:    Wow this really is an awesome website
 keywords:       Awesome, website, keywords
 ---
     <header>
+        <div class="overlay"></div>
         <div class="container">
             <div class="jumbotron text-center">
-                <h1>Een website die werkt</h1>
-                <p>Vertel je verhaal met een mooie en resultaatgerichte website.</p>
-                <p><a href="#special" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+                <h6>Vertel je verhaal</h6>
+                <h1><small>wij maken er een </small><br>belevenis van</h1>
+                <p><a href="#special" class="btn btn-primary btn-large">websites die iets betekenen</a></p>
             </div>
         </div>
     </header>
 
-    <section class="introduction">
+    <section class="intro">
         <div class="container">
             <div class="row">
-                <div class="col-12 text-center">
-                    <div class="page-header">
-                        <h1>Een nieuw soort website <small>mooi ontworpen en resultaatgericht</small></h1>
-                    </div>
+                <div class="col-5">
+                    <h4><small>Het gaat niet om de grootte van je <strong>Adwords</strong> budget...</small><br>
+                     Het gaat om je <em>idee</em> en hoe goed je het presenteert.</h4>
+                    <small><i class="icon-comment-alt"></i> Thats us... ;) </small>
+                </div>
+                <div class="col-7 offset-1">
+                    <p>Een website is niet anders dan ieder ander medium. Je kunt het beste idee van de wereld hebben, als mensen het niet voelen, dan verkoopt het niet.</p>
+
+                     <p>Met Smartsites vertellen we je verhaal door een unieke interactieve ervaring te creëren. Geen generieke website templates, met een saaie lap tekst, maar een ervaring die je bezoekers zal plezieren en je merk of product in hun gedachten zal houden.
+                    </p>
                 </div>
             </div>
-            <div class="row blocks text-center">
-                <div class="col-12 col-sm-6 col-lg-4 blokje">
-                    <p>Meer aanmeldingen</p>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <p>Meer aankopen</p>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <p>Meer leads</p>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <p>Meer downloads</p>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <p>Meer bekijks</p>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <p>Meer fans & volgers</p>
-                </div>
+            <div class="row">
 
-                <!-- Block overlays -->
-                <div class="block-overlay">
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <img src="{{ site.url }}/img/mobile-analytics.png">
-                        </div>
-                        <div class="col-lg-8">
-                            <p>Grow your email database by making it easy for your visitors to sign up on your site. A Flip Form or FlipJack can start your relationship off on the right foot.</p>
-                            <a href="#" class="blokje-close">Sluiten</a>
-                        </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="focus">
+        <div class="container">
+            <div class="row story-width">
+                <div class="col-12 text-center">
+                    <h1 class="blur" data-1000-top="color:transparent; text-shadow: 0 0 55px #fff" data-300-top="color:#fff; text-shadow: 0 0 0px #fff;">Focus</h1>
+                    <h2 data-1000-top="opacity:0;" data-300-top="opacity:1;">"The trick isn't adding stuff. It's taking away."</h2>
+                      <small data-1000-top="opacity:0;" data-300-top="opacity:1;"><i class="icon-comment-alt"></i> Mark Zuckerberg <a href="www.facebook.com">Facebook CEO</a></small>
+                </div>
+            </div>
+        </div>
+    </section>
+     <section class="focus-content">
+        <div class="container">
+            <div class="row story-width">
+                <div class="col-12 text-center">
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 offset-1">
+                    <p>Mensen komen niet op je website om eindeloos randinformatie te lezen. Ze willen iets weten over je bedrijf, product of dienst. Smartsites zijn gefocust, to the point en vooral gericht op resultaat.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="focus-blocks">
+        <div class="container">
+            <div class="row blocks text-center">
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <div class="well">
+                        <i class="icon-bar-chart icon-super"></i>
+                        <h6><small><em>meer</em></small><br> leads</h6>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <div class="well">
+                        <i class="icon-shopping-cart icon-super"></i>
+                        <h6><small><em>meer</em></small><br> verkopen</h6>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <div class="well">
+                        <i class="icon-facebook icon-super"></i>
+                        <h6><small><em>meer</em></small><br> volgers</h6>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                  <div class="well">
+                        <i class="icon-bar-chart icon-super"></i>
+                        <h6><small><em>meer</em></small><br> bekijks</h6>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <div class="well">
+                        <i class="icon-bar-chart icon-super"></i>
+                        <h6><small><em>meer</em></small><br> downloads</h6>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                   <div class="well">
+                        <i class="icon-bar-chart icon-super"></i>
+                        <h6><small><em>meer</em></small><br> signups</h6>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="responsive-showcase" id="special">
+
+    <section class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <p>Een website is een product waar je interactie mee hebt, dat intuitief zou moeten werken. Onze websites voelen aan als een app, vloeiend en dynamisch.</p>
+                </div>
+                <div class="col-5 offset-1">
+                    <h1>Ontwerp</h1>
+                    <h2>"Design is not just what it looks like & feels like. Design is how it works"</h2>
+                    <p class="text-right"><em>Steve Jobs</em></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+    <section class="">
+        <div class="container">
+            <div class="row story-width">
+                <div class="col-12 text-center">
+                    <h1>Resultaat</h1>
+                    <h2>What gets measured gets managed</h2>
+                      <small><i class="icon-comment-alt"></i> Peter Drucker <a href="www.facebook.com">Facebook CEO</a></small>
+                    <p>Je wilt iets bereiken. En dat betekent dat je ook moet weten hoe je website presteert wij bieden je standaard inzicht in wat er op je website gebeurt en de eerste dertig dagen houden we nauwlettend in de gaten of er nog zaken verbeterd kunnen worden om nog meer uit je website te halen.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    Voor de echte data of statistiek freak bieden we ook de mogelijkheid om nog verder op het bezoekersgedrag in te zoomen met de volgende tools.
+                </div>
+                <div class="col-4">
+                    Heatmaps
+                </div>
+                <div class="col-4">
+                    Qualaroo
+                </div>
+                <div class="col-4">
+                    Optimizely
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+   <!-- <section class="responsive-showcase" id="special">
         <div class="overlay">
         </div>
         <div class="container">
@@ -143,7 +233,7 @@ keywords:       Awesome, website, keywords
             </ul>
         </div>
     </div>
-    </div>
+    </div>-->
 
     <section>
         <div class="container">
@@ -274,16 +364,6 @@ keywords:       Awesome, website, keywords
         </div>
     </section>
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center quote">
-                      <h2>The trick isn't adding stuff. It's taking away.</h2>
-                      <small><i class="icon-comment-alt"></i> Mark Zuckerberg <a href="www.facebook.com">Facebook CEO</a></small>
-                </div>
-            </div>
-        </div>
-    </section>
 <!--
     <section>
         <div class="container">
