--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ keywords:       Awesome, website, keywords
             <div class="row story-width">
                 <div class="col-12 text-center">
                     <h1 class="blur" data-1000-top="color:transparent; text-shadow: 0 0 55px #fff" data-300-top="color:#fff; text-shadow: 0 0 0px #fff;">Focus</h1>
-                    <h2 data-1000-top="opacity:0;" data-300-top="opacity:1;">"The trick isn't adding stuff. It's taking away."</h2>
-                      <small data-1000-top="opacity:0;" data-300-top="opacity:1;"><i class="icon-comment-alt"></i> Mark Zuckerberg <a href="www.facebook.com">Facebook CEO</a></small>
+                    <h2 data-1000-top="opacity:0; transform: translate(0,50px);" data-300-top="opacity:1; transform: translate(0,0);">"The trick isn't adding stuff. It's taking away."</h2>
+                      <small data-1000-top="opacity:0; transform: translate(0,50px)" data-300-top="opacity:1; transform: translate(0,0px)"><i class="icon-comment-alt"></i> Mark Zuckerberg <a href="www.facebook.com">Facebook CEO</a></small>
                 </div>
             </div>
         </div>
@@ -66,37 +66,37 @@ keywords:       Awesome, website, keywords
         <div class="container">
             <div class="row blocks text-center">
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <div class="well">
+                    <div class="well" data-600-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-500-top="opacity:1; transform: scale(1) translate(0, 0);">
                         <i class="icon-bar-chart icon-super"></i>
                         <h6><small><em>meer</em></small><br> leads</h6>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <div class="well">
+                    <div class="well" data-550-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-450-top="opacity:1; transform: scale(1) translate(0, 0);">
                         <i class="icon-shopping-cart icon-super"></i>
                         <h6><small><em>meer</em></small><br> verkopen</h6>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <div class="well">
+                    <div class="well" data-500-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-400-top="opacity:1; transform: scale(1) translate(0, 0);">
                         <i class="icon-facebook icon-super"></i>
                         <h6><small><em>meer</em></small><br> volgers</h6>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                  <div class="well">
+                  <div class="well"  data-460-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-360-top="opacity:1; transform: scale(1) translate(0, 0);">
                         <i class="icon-bar-chart icon-super"></i>
                         <h6><small><em>meer</em></small><br> bekijks</h6>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                    <div class="well">
+                    <div class="well"  data-420-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-320-top="opacity:1; transform: scale(1) translate(0, 0);">
                         <i class="icon-bar-chart icon-super"></i>
                         <h6><small><em>meer</em></small><br> downloads</h6>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4 col-lg-2">
-                   <div class="well">
+                   <div class="well"  data-400-top="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-300-top="opacity:1; transform: scale(1) translate(0, 0);">
                         <i class="icon-bar-chart icon-super"></i>
                         <h6><small><em>meer</em></small><br> signups</h6>
                     </div>
@@ -105,6 +105,46 @@ keywords:       Awesome, website, keywords
         </div>
     </section>
 
+    <section class="design">
+        <div class="container">
+            <div class="row story-width text-center">
+                <div class="col-12">
+                    <svg version="1.1"
+                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" viewBox="-22.999 -51.041 1662 663"
+                         >
+                    <defs>
+                    </defs>
+                    <path  style="fill:none;stroke:#878787;stroke-width:2; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-600-top="stroke-dashoffset:2000;" data-100-top="stroke-dashoffset:0;"
+                    d="M0,4.942h153.832c102.553,0,146.416,53.13,146.416,206.343c0,160.01-20.386,234.763-156.919,234.763H0V4.942z
+                         M103.791,369.441h27.799c47.57,0,64.869-19.151,64.869-151.359c0-107.496-8.65-136.533-63.632-136.533h-29.036V369.441z"/>
+                    <path  style="fill:none;stroke:#878787;stroke-width:2; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-600-top="stroke-dashoffset:2000;" data-100-top="stroke-dashoffset:0;"
+                    d="M429.365,295.306v20.388c0,51.895,7.413,77.225,36.45,77.225c26.566,0,33.979-19.151,36.449-61.163h92.669
+                        c-1.853,83.403-46.333,122.941-129.736,122.941c-126.03,0-135.916-88.962-135.916-187.809c0-93.905,27.183-163.717,135.916-163.717
+                        c123.558,0,132.825,78.461,132.825,192.135H429.365z M501.648,237.233c0-46.953-6.178-72.282-33.979-72.282
+                        c-32.742,0-38.304,27.183-38.304,72.282H501.648z"/>
+                    <path  style="fill:none;stroke:#878787;stroke-width:2; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-600-top="stroke-dashoffset:2000;" data-100-top="stroke-dashoffset:0;"
+                    d="M706.567,339.788c0.619,14.827,1.854,27.801,6.797,37.686c5.559,9.267,14.209,15.445,30.89,15.445
+                        c24.093,0,35.831-14.827,35.831-33.979c0-15.445-6.796-30.272-38.304-40.774c-82.167-27.801-121.706-43.245-121.706-114.292
+                        c0-66.721,46.335-100.701,127.267-100.701c93.286,0,121.087,46.336,121.087,93.906v11.119h-88.963v-6.178
+                        c0-29.035-11.119-37.067-32.742-37.067c-26.566,0-33.979,12.973-33.979,30.89c0,58.69,160.009,19.769,160.009,149.505
+                        c0,67.34-44.482,109.35-127.884,109.35c-89.58,0-127.265-33.36-127.265-100.082v-14.827H706.567z"/>
+                    <path  style="fill:none;stroke:#878787;stroke-width:2; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-600-top="stroke-dashoffset:2000;" data-100-top="stroke-dashoffset:0;"
+                    d="M906.118,0h100.083v76.607H906.118V0z M906.118,111.821h100.083v334.227H906.118V111.821z"/>
+                    <path  style="fill:none;stroke:#878787;stroke-width:2; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-600-top="stroke-dashoffset:2000;" data-100-top="stroke-dashoffset:0;"
+                    d="M1221.44,111.821h92.671V434.31c0,75.989-33.36,125.41-139.006,125.41c-96.992,0-125.412-42.624-125.412-92.667h92.67
+                        c1.854,9.268,5.56,16.063,10.504,20.389c6.793,4.323,14.827,6.794,24.712,6.794c32.742,0,40.154-21.623,40.154-85.256v-20.386
+                        h-1.234c-14.211,38.92-44.482,49.424-79.077,49.424c-71.664,0-93.906-71.666-93.906-163.717c0-79.078,11.121-171.13,97.613-171.13
+                        c45.099,0,67.337,23.477,79.078,53.749h1.233V111.821z M1180.049,365.117c27.183,0,37.684-19.77,37.684-95.14
+                        c0-61.781-7.412-90.199-36.45-90.199c-32.742,0-37.684,38.304-37.684,93.289C1143.599,342.876,1152.867,365.117,1180.049,365.117z"
+                        />
+                    <path  style="fill:none;stroke:#878787;stroke-width:2; stroke-linejoin:miter;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:2000;" data-600-top="stroke-dashoffset:2000;" data-100-top="stroke-dashoffset:0;"
+                    d="M1357.979,111.821h96.375v39.539h1.237c14.207-29.655,43.246-48.189,80.311-48.189c56.84,0,87.111,28.42,87.111,92.671
+                        v250.207H1522.93V218.082c0-24.094-9.886-38.304-29.038-38.304c-19.151,0-35.831,14.827-35.831,47.571v218.699h-100.082V111.821z"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="">
         <div class="container">
@@ -148,6 +188,9 @@ keywords:       Awesome, website, keywords
             </div>
         </div>
     </section>
+
+
+
 
 
    <!-- <section class="responsive-showcase" id="special">
