--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ keywords:       Awesome, website, keywords
         <video id="example_video_1" class="full-video"
           poster="http://video-js.zencoder.com/oceans-clip.png"
           data-setup='{"autoplay": true, "controls": false, "loop": false}'>
-         <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
+         <source src="{{http://video-js.zencoder.com/oceans-clip}}.mp4" type='video/mp4' />
          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
          <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
         </video>
@@ -128,7 +128,7 @@ keywords:       Awesome, website, keywords
          <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
          <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
         </video>
-        <div class="fixed-center" data-600-top="position:relative; opacity:1;" data-150-top="position:fixed;" data-bottom-top="opacity:0;">
+        <div class="" data-600-top="top: 0em; opacity:1;" data-250-top="top:10em;" data-bottom-top="opacity:0;">
         <div class="container">
             <div class="row story-width text-center">
                 <div class="col-12">
