--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ keywords:       Awesome, website, keywords
         <video id="example_video_1" class="full-video"
           poster="http://video-js.zencoder.com/oceans-clip.png"
           data-setup='{"autoplay": true, "controls": false, "loop": false}'>
-         <source src="{{http://video-js.zencoder.com/oceans-clip}}.mp4" type='video/mp4' />
-         <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
-         <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
+         <source src="{{ site.url }}/img/coast.mp4" type='video/mp4' />
+         <source src="{{ site.url }}/img/coast.webm" type='video/webm' />
+         <source src="{{ site.url }}/img/coast.ogv" type='video/ogg' />
         </video>
             <div class="vert-center">
                     <div class="col-12 text-center">
