--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description:    Wow this really is an awesome website
 keywords:       Awesome, website, keywords
 ---
 
-    <header data-800="top:0%;" data-1000="top:-100%">
+    <header data-800="top:0%;" data-1400="top:-100%">
         <video id="example_video_1" class="full-video"
           poster="http://video-js.zencoder.com/oceans-clip.png"
           data-setup='{"autoplay": true, "controls": false, "loop": false}'>
@@ -25,7 +25,11 @@ keywords:       Awesome, website, keywords
             </div>
     </header>
 
-    <section class="intro" id="intro" data-200="top:100%; opacity:1;" data-800="top: 0;" data-1000="opacity:1;" data-1400="opacity:0;">
+    <section class="coast" data-2000="top:0%;" data-2001="top:-100%;">
+        <h1 class="text-center">Hier coast logo</h1>
+    </section>
+
+    <section class="intro" id="intro" data-1200="top:100%; opacity:1;" data-1800="top: 0;" data-2000="opacity:1;" data-2400="opacity:0;">
         <div class="container">
             <div class="vert-center">
                 <div class="row story-width text-center">
@@ -51,7 +55,7 @@ keywords:       Awesome, website, keywords
         </div>
     </section>
 
-    <section class="focus" id="focus">
+    <section class="focus" id="focus" data-2600="top:0%;" data-3200="top: -100%;">
         <div class="container">
             <div class="vert-center">
                 <div class="row story-width">
@@ -66,7 +70,7 @@ keywords:       Awesome, website, keywords
             </div>
         </div>
     </section>
-     <section class="focus-content">
+     <section class="focus-content" data-2600="top: 100%;" data-3200="top: 0%" data-3800="top:-100%">
         <div class="container">
             <div class="row story-width">
                 <div class="col-12 text-center">
@@ -80,7 +84,7 @@ keywords:       Awesome, website, keywords
             </div>
         </div>
     </section>
-    <section class="focus-blocks">
+    <section class="focus-blocks" data-3200="top: 100%;" data-3800="top: 0%">
         <div class="container">
             <div class="row blocks text-center">
                 <div class="col-6 col-sm-4 col-lg-2">
