--- a/index.html
+++ b/index.html
@@ -6,19 +6,26 @@ description:    Wow this really is an awesome website
 keywords:       Awesome, website, keywords
 ---
 
-    <header>
-            <div class="vert-center">
-                <div class="col-12 text-center">
-                    <div class="jumbotron" data-400="opacity: 1; margin-top: 0%;" data-800="opacity: 0; margin-top: -20%;">
-                        <h6>Vertel je verhaal</h6>
-                        <h1><small>wij maken er een </small><br>belevenis van</h1>
-                        <p><a href="#intro" data-menu-top="1800" class="btn btn-primary btn-large">websites die iets betekenen</a></p>
-                    </div>
+    <header data-400="top:0%;" data-1000="top:-100%">
+        <video id="example_video_1" class="full-video visible-lg" 
+            poster="http://video-js.zencoder.com/oceans-clip.png"
+            data-setup='{"autoplay": true, "controls": false, "loop": true}'>
+              <source src="http://gouwestad.com/lex/basis/_site/img/coast.mp4" type='video/mp4' />
+              <source src="http://gouwestad.com/lex/basis/_site/img/coast.webm" type='video/webm' />
+              <source src="http://gouwestad.com/lex/basis/_site/img/coast.ogv" type='video/ogg' />
+        </video>
+        <div class="vert-center">
+            <div class="col-12 text-center">
+                <div class="jumbotron" data-200="opacity: 1; margin-top: 0%;" data-800="opacity: 0; margin-top: -20%;">
+                    <h6>Vertel je verhaal</h6>
+                    <h1><small>wij maken er een </small><br>belevenis van</h1>
+                    <p><a href="#intro" data-menu-top="1800" class="btn btn-primary btn-large">websites die iets betekenen</a></p>
                 </div>
             </div>
+        </div>
     </header>
 
-  <!-- <section class="coast visible-lg">
+  <section class="coast" data-1800="top:0%;" data-1801="top:-100%">
         <div class="container">
             <div class="vert-center">
                 <div class="row story-width">
@@ -31,9 +38,9 @@ keywords:       Awesome, website, keywords
                 </div>
             </div>
         </div>
-    </section> -->
+    </section> 
 
-    <section class="intro" id="intro" data-1200="top:100%;" data-1800="top: 0%;">
+    <section class="intro" id="intro" data-1000="top:100%;" data-1800="top: 0%;" data-2000="opacity:1" data-2600="opacity:0">
         <div class="container">
             <div class="vert-center">
                 <div class="row story-width text-center">
@@ -58,6 +65,10 @@ keywords:       Awesome, website, keywords
             </div>
         </div>
     </section>
+
+    {% include focus.html %}
+
+    {% include design.html %}
 
     
 
