--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ keywords:       Awesome, website, keywords
             <div class="col-12 text-center">
                 <div class="jumbotron" data-200="opacity: 1; margin-top: 0%;" data-800="opacity: 0; margin-top: -20%;">
                     <img src="{{ site.url }}/img/logo-notext.png">
-                    <h1><strong>Coast</strong></h1>
+                    <h1>A new online <strong>Exposure</strong></h1>
                     <h5>websites die verkopen</h5>
                     <p><a href="#intro" data-menu-top="1800" class="btn btn-primary btn-large">een nieuwe manier om je online te presenteren</a></p>
                 </div>
@@ -45,33 +45,22 @@ keywords:       Awesome, website, keywords
         <div class="container">
             <div class="vert-center">
                 <div class="row text-center">
-                    <div class="col-10">
+                    <div class="col-12 col-sm-8">
                         <h4><small>Het gaat niet om de grootte van je <strong>Adwords</strong> budget...</small><br></h4>
                     </div>
-                    <div class="col-10">
+                    <div class="col-12 col-sm-8">
                          <h4>Het gaat om je <em>idee</em> en hoe goed je het presenteert.</h4>
                     </div>
-                    <div class="col-10">
+                    <div class="col-12 col-sm-8">
                         <p>Coast websites zijn de nieuwe standaard op webgebied. Volwaardige online campagnes, die bezoekers enthousiasmeren en tot actie over laten gaan.
-                            De eigenschappen?
-                        </p>
-                    </div>
-                    <div class="col-10">
-                        <ul>
-                            <li><a href="#focus">Focus</a> op wat belangrijk is.</li>
-                            <li>Custom <a href="#design">design</a> van de hoogste kwaliteit.</li>
-                            <li>Aandacht voor de <a href="#resultaat">resultaten.</a></li>
-                            <li>De allernieuwste <a href="#techniek">technieken</a> om je verhaal tot leven te laten komen.</li>
-                            <li>Ow ja, het is nog <a href="#kosten">betaalbaar</a> ook.</li>
-                            <li>Of geloof je het allemaal wel, dan kun je hier bestellen</li>
-                        </ul>
-
+                            De eigenschappen?</p>
+                          <p>Coast websites zijn <a href"#focus">gefocust</a>, met de hand <a href="#design">ontworpen</a>, ontwikkeld met de allerlaatste <a href="#techniek">webtechnieken</a> en ook nog eens <a href="#betaalbaar">betaalbaar</a>.
                         </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 text-center">
-                        <a href="#focus" data-menu-top="2600" class="btn btn-large btn-primary">leg de focus op je verhaal</a>
+                    <div class="col-12">
+                        <a href="#focus" data-menu-top="2600"><i class="icon-arrow-down"></i> scroll verder en lees hoe gefocust Coast is</a>
                     </div>
                 </div>
             </div>
