--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ tagline:        Of this awesome website
 description:    Wow this really is an awesome website
 keywords:       Awesome, website, keywords
 ---
-
+    <div class="loading overlay"></div>
+    
     <header data-400="transform[swing]: scale(1); opacity:1;" data-1000="transform: scale(3); opacity:0; top: 0%;" data-1001="top:-300%;">
         <video id="example_video_1" class="full-video visible-lg" 
             poster="http://video-js.zencoder.com/oceans-clip.png"
@@ -14,6 +15,7 @@ keywords:       Awesome, website, keywords
               <source src="http://gouwestad.com/lex/basis/_site/img/coast.webm" type='video/webm' />
               <source src="http://gouwestad.com/lex/basis/_site/img/coast.ogv" type='video/ogg' />
         </video>
+        <div class="overlay"></div>
         <div class="row">
             <div class="col-12 text-center">
                 <div class="jumbotron" data-50="opacity: 1; margin-top: 0%;" data-1000="margin-top: -50%;">
