--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@ tagline:        Of this awesome website
 description:    Wow this really is an awesome website
 keywords:       Awesome, website, keywords
 ---
-    <div class="loading overlay"></div>
-    
+    <div class="loading overlay">
+        <div class="container">
+            <div class="vert-center text-center">
+                <img src="{{site.url}}/img/logo.png">
+            </div>
+        </div>
+    </div>
+
     <header data-400="transform[swing]: scale(1); opacity:1;" data-1000="transform: scale(3); opacity:0; top: 0%;" data-1001="top:-300%;">
         <video id="example_video_1" class="full-video visible-lg" 
             poster="http://video-js.zencoder.com/oceans-clip.png"
