--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ keywords:       Awesome, website, keywords
     <div class="loading overlay">
         <div class="container">
             <div class="vert-center text-center">
-                <img src="{{site.url}}/img/logo.png">
+                <i class="icon-circle 1"></i>
+                <i class="icon-circle twee"></i>
+                <i class="icon-circle drie"></i>
+                 <i class="icon-circle vier"></i>
             </div>
         </div>
     </div>
