--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@ keywords:       Awesome, website, keywords
               <source src="http://gouwestad.com/lex/basis/_site/img/coast.webm" type='video/webm' />
               <source src="http://gouwestad.com/lex/basis/_site/img/coast.ogv" type='video/ogg' />
         </video>
-        <div class="overlay"></div>
         <div class="row">
             <div class="col-12 text-center">
                 <div class="jumbotron" data-50="opacity: 1; margin-top: 0%;" data-1000="margin-top: -50%;">
                     <img src="{{ site.url }}/img/logo-notext.png">
-                    <h1>A new online <strong>Exposure</strong></h1>
-                    <h5>websites die verkopen</h5>
+                    <h1>Websites met een verhaal</h1>
+                    <h2><span>jouw verhaal</span></h2>
                     <p><a href="#intro" data-menu-top="1800" class="btn btn-primary btn-large">een nieuwe manier om je online te presenteren</a></p>
                 </div>
             </div>
