Menu scroll update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ keywords:       Awesome, website, keywords
                     <div class="jumbotron" data-50="opacity: 1; margin-top: 0%;" data-1000="margin-top: -50%;">
                         <img src="{{ site.url }}/img/logo.png">
                         <h1>een website die <span>jouw verhaal</span> verteld</h1>
-                        <p><a href="#intro" data-menu-top="1800" class="btn btn-large">een nieuwe manier om je online te presenteren</a></p>
+                        <p><a href="#intro" data-menu-top="2000" class="btn btn-large">een nieuwe manier om je online te presenteren</a></p>
                     </div>
                 </div>
             </div>
@@ -53,8 +53,8 @@ keywords:       Awesome, website, keywords
         </div>
     </section> 
 
-    <section class="intro" id="intro" data-1000="top:100%;" data-1200="background-position: 120% 0;" data-1950="top: 0%;" data-2000="background-position: 100% 0;" data-2200="opacity:1;" data-2600="opacity:0; top:0%; background-position: 120% 0;" data-2602="top:-100%;" >
-        <div class="overlay"></div>
+    <section class="intro" id="intro" data-1000="top:100%;" data-1950="top: 0%;" data-2200="opacity:1;" data-2600="opacity:0; top:0%; background-position: 120% 0;" data-2602="top:-100%;" >
+        <div class="overlay" data-1200="background-position: 120% 0;" data-2000="background-position: 100% 0;"></div>
         <div class="container">
             <div class="vert-center">
                 <div class="row text-center">
