--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ keywords:       Awesome, website, keywords
                     <div class="jumbotron" data-50="opacity: 1; margin-top: 0%;" data-1000="margin-top: -50%;">
                         <img src="{{ site.url }}/img/logo.png">
                         <h1>een website die <span>jouw verhaal</span> verteld</h1>
-                        <p><a href="#intro" data-menu-top="2000" class="btn btn-large">een nieuwe manier om je online te presenteren</a></p>
+                        <p><a href="#intro" data-menu-top="2000" class="btn btn-large"><strong>surfen</strong> nieuwe stijl - lees ons verhaal</a></p>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@ keywords:       Awesome, website, keywords
         <div class="overlay" data-1200="background-position: 120% 0;" data-2000="background-position: 100% 0;"></div>
         <div class="container">
             <div class="vert-center">
-                <div class="row text-center">
+                <div class="row">
                     <div class="col-12 col-sm-8">
                         <h4 data-1600="opacity:0; top:20%" data-1750="opacity:1; top: 0%;"><small>Het gaat niet om de grootte van je <strong>Adwords</strong> budget...</small><br></h4>
                     </div>
@@ -83,8 +83,6 @@ keywords:       Awesome, website, keywords
     {% include focus.html %}
 
     {% include design.html %}
-
-    {% include showcase.html %}
 
     {% include resultaten.html %}
 
