added some awesome backgrounds

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ keywords:       Awesome, website, keywords
         </video>
         <div class="overlay"></div>-->
         <div class="container">
-            <div class="row story-width">
+            <div class="row vert-center story-width">
                 <div class="col-12 text-center">
                     <div class="jumbotron" data-50="margin-top: 0%;" data-1000="margin-top: -50%;">
                         <img src="{{ site.url }}/img/logo.png">
-                        <h1>een website die <span>jouw verhaal</span> verteld</h1>
+                        <h1>Awesome websites that <br><span>tell a story</span></h1>
                         <p><a href="#intro" data-menu-top="2000" class="btn btn-large"><strong>surfen</strong> nieuwe stijl - lees ons verhaal</a></p>
                     </div>
                 </div>
@@ -53,8 +53,8 @@ keywords:       Awesome, website, keywords
         </div>
     </section> 
 
-    <section class="intro" id="intro" data-1000="top:100%;" data-1950="top: 0%;" data-2200="opacity:1;" data-2600="opacity:0; top:0%; background-position: 120% 0;" data-2602="top:-100%;" >
-        <div class="overlay" data-1200="background-position: 120% 0;" data-2000="background-position: 100% 0;"></div>
+    <section class="intro" id="intro" data-1000="top:100%;" data-1950="top: 0%;" data-2200="opacity:1;" data-2600="opacity:0; top:0%;" data-2602="top:-100%;" >
+        <div class="overlay" data-1200="background-position: 120% bottom;" data-2000="background-position: 100% bottom;"></div>
         <div class="container">
             <div class="vert-center">
                 <div class="row">
@@ -83,9 +83,6 @@ keywords:       Awesome, website, keywords
     {% include focus.html %}
 
     {% include design.html %}
-
-    {% include resultaten.html %}
-
     
 
 
